-rmdf update - enabled folder deletion